tests/sema/negative/enum_type_mismatch.nv
enum Color {
    Red;
}

enum Shape {
    Circle;
}

fn main() : void {
    let c : Color = Shape.Circle;
    return;
}
